# manamesh

./: .cspell.json  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  CardGameTechStackDesign.markdown  LICENSE  PRD.md  PRD_GameModule_Battleship.md  PRD_HE_Option2_Threshold_Tally_Game.md  PRD_HE_Option3_HE_plus_ZK_Verified_Query.md  PRD_Implementation.md  PROGRESS.md  PROMPT.md  README.md  RESEARCH_Content_Pack_Importers.md  RESEARCH_MTG_CardSources.md  RESEARCH_OnePiece_CardSources.md  design.yaml  package.json  tsconfig.json  tsconfig.tsbuildinfo
tools/card-scraper/: .gitignore  README.md  config.example.yaml  pyproject.toml
tools/card-scraper/card_scraper/: __init__.py  __main__.py  adapters.py  cli.py  config.py  downloader.py  manifest.py  models.py  scraper.py  state.py
tools/card-scraper/card_scraper/games/: __init__.py
tools/card-scraper/tests/: test_config.py  test_manifest.py  test_models.py  test_state.py
tools/card-scraper/tests/mtg/: test_mtg_manifest.py  test_mtgjson.py  test_scryfall_api.py  test_scryfall_bulk.py  test_type_parser.py
tools/card-scraper/tests/onepiece/: test_optcg_adapter.py  test_ryan_adapter.py
tools/onepiece-scraper/: README.md  config.example.yaml  pyproject.toml
tools/onepiece-scraper/onepiece_scraper/: __init__.py  __main__.py  cli.py  config.py  downloader.py  manifest.py  models.py  scraper.py  state.py
tools/onepiece-scraper/onepiece_scraper/adapters/: __init__.py  base.py  (+3 more)
tools/onepiece-scraper/tests/: test_config.py  test_manifest.py  test_models.py  test_optcg_adapter.py  test_ryan_adapter.py  test_state.py
(+158 files in other folders)
